# ot_flow_matching_project

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  firstrun.ipynb  pyproject.toml  requirements.txt
.github/workflows/: test.yml
configs/: base.yaml
experiments/: _make_notebooks.py  baseline_4_couplings.ipynb  final_figures.ipynb  multiseed_baseline.ipynb  nfe_solver_comparison.ipynb
otfm/: __init__.py  couplings.py  datasets.py  diagnostics.py  metrics.py  model.py  plotting.py  runtime.py  solvers.py  sweeps.py  training.py
report/: biblio.bib  main.tex  tables.tex
scripts/: run_full_benchmark.py
slides/: main.tex
tests/: test_couplings.py  test_datasets.py  test_loss.py  test_metrics.py  test_runtime.py  test_solvers.py
